--- a/index.html
+++ b/index.html
@@ -68,15 +68,18 @@
     </div>
   </header>
 
- <!-- ================= hero ================= -->
+ <!-- ================= HERO ================= -->
 <div id="hero-container">
   <h2 id="hero-tittle">Tu CV no falla. <br>El sistema sí.</h2>
   <h3 id="hero-subtittle">Ayudamos a profesionales a superar los filtros ATS usados por el 99% de las empresas Fortune 500.</h3>
 </div>
+ <!-- ================= FORM ================= -->
 <div id="form-container">
   <div class="ml-embedded" data-form="kdTQNh"></div>
   <span id="form_subtittle">Gratuito  ▪ Sin spam  ▪ Usado por +2000 profesionales</span>
 </div>
+
+ <!-- ================= TEXT ================= -->
   <!-- ================= FOOTER ================= -->
   <footer class="sticky-footer">
     <div class="footer-content">
