--- a/index.html
+++ b/index.html
@@ -70,16 +70,27 @@
 
  <!-- ================= HERO ================= -->
 <div id="hero-container">
-  <h2 id="hero-tittle">Tu CV no falla. <br>El sistema sí.</h2>
-  <h3 id="hero-subtittle">Ayudamos a profesionales a superar los filtros ATS usados por el 99% de las empresas Fortune 500.</h3>
+  <h2 id="hero-title">Tu CV no falla. <br>El sistema sí.</h2>
+  <h3 id="hero-subtitle">Ayudamos a profesionales a superar los filtros ATS usados por el 99% de las empresas Fortune 500.</h3>
 </div>
  <!-- ================= FORM ================= -->
 <div id="form-container">
   <div class="ml-embedded" data-form="kdTQNh"></div>
-  <span id="form_subtittle">Gratuito  ▪ Sin spam  ▪ Usado por +2000 profesionales</span>
+  <span id="form_subtitle">Gratuito  ▪ Sin spam  ▪ Usado por +2000 profesionales</span>
 </div>
 
  <!-- ================= TEXT ================= -->
+  <div id="text-container">
+    
+  <p id="text-container-title">El 75% de los CVs nunca llega a un humano.</p>
+  <p id="text-container-subtitle">No por falta de talento, si no por reglas invisibles.</p>
+  </div>
+
+
+  
+ <!-- ================= IMG ================= -->
+
+ 
   <!-- ================= FOOTER ================= -->
   <footer class="sticky-footer">
     <div class="footer-content">
