--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
   <p id="text-container-title">El 75% de los CVs nunca llega a un humano.</p>
   <p id="text-container-subtitle">No por falta de talento, si no por reglas invisibles.</p>
   <div id="text-img-container">
-    <img src="./img/text-img.png" alt="">
-    
+    <img id="text-img" src="./img/text-img.png" alt="">
+        <img id="text-img-responsive" src="./img/text-img-responsive.png" alt="">
     
   </div>
   <p>Esas y muchas otras reglas invisibles tienen nombre: ATS (Applicant Tracking System).
