--- a/index.html
+++ b/index.html
@@ -87,17 +87,17 @@
   <div id="text-img-container">
     <img id="text-img" src="./img/text-img.png" alt="">
         <img id="text-img-responsive" src="./img/text-img-responsive.png" alt="">
-    
+
   </div>
-  <p>Esas y muchas otras reglas invisibles tienen nombre: ATS (Applicant Tracking System).
+
+  </div>
+      <p id ="final-text">Esas y muchas otras reglas invisibles tienen nombre: ATS (Applicant Tracking System).
 Son los sistemas que analizan y filtran tu CV antes de que un humano llegue a verlo.
 Si tu CV no está optimizado para superarlos, queda descartado automáticamente — sin importar tu talento. Por eso es urgente saber si el tuyo está optimizado.
 En el menú podés escanear tu CV, conocer tu puntaje y seguir los pasos exactos para mejorarlo.
 
 **No postules a ciegas: auditá tu CV ahora.**
 </p>
-  </div>
-
 
   
  <!-- ================= IMG ================= -->
