--- a/index.html
+++ b/index.html
@@ -90,15 +90,16 @@
 
   </div>
 
-  </div>
-      <p id ="final-text">Esas y muchas otras reglas invisibles tienen nombre: ATS (Applicant Tracking System).
-Son los sistemas que analizan y filtran tu CV antes de que un humano llegue a verlo.
-Si tu CV no está optimizado para superarlos, queda descartado automáticamente — sin importar tu talento. Por eso es urgente saber si el tuyo está optimizado.
+  </div >
+  <div id="final-text-container">
+      <p id ="final-text">Esas y muchas otras reglas invisibles tienen nombre:<br> ATS (Applicant Tracking System).<br>
+Son los sistemas que analizan y filtran tu CV antes de que un humano llegue a verlo.<br>
+Si tu CV no está optimizado para superarlos, queda descartado automáticamente — sin importar tu talento.<br> Por eso es urgente saber si el tuyo está optimizado.<br>
 En el menú podés escanear tu CV, conocer tu puntaje y seguir los pasos exactos para mejorarlo.
-
+<br>
 **No postules a ciegas: auditá tu CV ahora.**
 </p>
-
+</div>
   
  <!-- ================= IMG ================= -->
 
