--- a/index.html
+++ b/index.html
@@ -92,12 +92,15 @@
 
   </div >
   <div id="final-text-container">
-      <p id ="final-text">Esas y muchas otras reglas invisibles tienen nombre:<br> ATS (Applicant Tracking System).<br>
-Son los sistemas que analizan y filtran tu CV antes de que un humano llegue a verlo.<br>
-Si tu CV no está optimizado para superarlos, queda descartado automáticamente — sin importar tu talento.<br> Por eso es urgente saber si el tuyo está optimizado.<br>
+      <p id ="final-text">Esas y muchas otras reglas invisibles tienen nombre: ATS (Applicant Tracking System).
+Son los sistemas que analizan y filtran tu CV antes de que un humano llegue a verlo.
+Si tu CV no está optimizado para superarlos, queda descartado automáticamente — sin importar tu talento. Por eso es urgente saber si el tuyo está optimizado.
 En el menú podés escanear tu CV, conocer tu puntaje y seguir los pasos exactos para mejorarlo.
-<br>
-**No postules a ciegas: auditá tu CV ahora.**
+
+Antes de eso, podés descargar la Checklist de 10 puntos para que el filtro ATS no te descarte.
+Te va a permitir verificar si tu CV ya cumple con los criterios básicos que usan estos sistemas y detectar errores críticos antes de auditarlo. La recibís en PDF al dejar tu email en el formulario de arriba.
+
+No postules a ciegas: auditá tu CV ahora.
 </p>
 </div>
   
