--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ Son los sistemas que analizan y filtran tu CV antes de que un humano llegue a ve
 Si tu CV no está optimizado para superarlos, queda descartado automáticamente — sin importar tu talento.<br><br> Por eso es urgente saber si el tuyo está optimizado.<br><br>
 En el menú podés escanear tu CV, conocer tu puntaje y seguir los pasos exactos para mejorarlo.<br><br>
 
-Antes de eso, podés descargar la Checklist de 10 puntos para que el filtro ATS no te descarte.<br><br>
-Te va a permitir verificar si tu CV ya cumple con los criterios básicos que usan estos sistemas y detectar errores críticos antes de auditarlo.<br><br> La recibís en PDF al dejar tu email en el formulario de arriba.<br><br>
+Antes de eso, descarga la Checklist de 10 puntos para que el filtro ATS no te descarte.<br><br>
+Esta lista te va a permitir verificar si tu CV ya cumple con los criterios básicos que usan estos sistemas y detectar errores críticos antes de auditarlo.<br><br> La recibís en PDF al dejar tu email en el formulario de arriba.<br><br>
 
 No postules a ciegas: auditá tu CV ahora.
 </p>
