--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
  <!-- ================= TEXT ================= -->
   <div id="text-container">
     
-  <p id="text-container-title">El 75% de los CVs nunca llega a un humano.</p>
+  <p id="text-container-title">El 75% de los CVs nunca llega a RRHH.</p>
   <p id="text-container-subtitle">No por falta de talento, si no por reglas invisibles.</p>
   <div id="text-img-container">
     <img id="text-img" src="./img/text-img.png" alt="">
