perdio estilo pero está escroleable

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
       <a class="mobile-link" href="https://sheetsresume.com/r/smart-career-tools" target="_blank" rel="noopener noreferrer">🔗 sheetsresume.com</a>
     </div>
   </header>
+ <!-- ================= SCROLL ================= -->
+<div id="scroll-layer">
 
  <!-- ================= HERO ================= -->
 <div id="hero-container">
@@ -104,8 +106,8 @@ No postules a ciegas: auditá tu CV ahora.
 </p>
 </div>
   
- <!-- ================= IMG ================= -->
-
+ <!-- ================= fin scroll ================= -->
+</div>
 
   <!-- ================= FOOTER ================= -->
   <footer class="sticky-footer">
