--- a/index.html
+++ b/index.html
@@ -84,17 +84,17 @@
  <!-- ================= TEXT ================= -->
   <div id="text-container">
     
-  <p id="text-container-title">El 75% de los CVs nunca llega a RRHH.</p>
-  <p id="text-container-subtitle">No por falta de talento, si no por reglas invisibles.</p>
+  <p id="text-container-title">El 75% de los CVs nunca llega a RRHH.<br>No por falta de talento, por reglas invisibles.</p>
+
   <div id="text-img-container">
     <img id="text-img" src="./img/text-img.png" alt="">
-        <img id="text-img-responsive" src="./img/text-img-responsive.png" alt="">
+        <img id="text-img-responsive" src="./img/recuadros copy.png" alt="">
 
   </div>
 
   </div >
   <div id="final-text-container">
-      <p id ="final-text">Esas y muchas otras reglas invisibles tienen nombre:<br><br> ATS (Applicant Tracking System).<br><br>
+      <p id ="final-text">Esas y muchas otras reglas tienen nombre:<br><br> ATS (Applicant Tracking System).<br><br>
 Son los sistemas que analizan y filtran tu CV antes de que un humano llegue a verlo.<br><br>
 Si tu CV no está optimizado para superarlos, queda descartado automáticamente — sin importar tu talento.<br><br> Por eso es urgente saber si el tuyo está optimizado.<br><br>
 En el menú podés escanear tu CV, conocer tu puntaje y seguir los pasos exactos para mejorarlo.<br><br>
