--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <!-- Navegación desktop -->
       <nav id="nav">
-        <a id="nav-download" href="#form">Descargas</a>
+        <a id="nav-download" href="https://sheetsresumecom.sjv.io/DyDLMq">Escanea tu CV</a>
         <a href="">Blog</a>
         <a href="https://sheetsresume.com/r/smart-career-tools"target="_blank" rel="noopener noreferrer">sheetsresume.com</a>
       </nav>
@@ -84,7 +84,7 @@
  <!-- ================= TEXT ================= -->
   <div id="text-container">
     
-  <p id="text-container-title">El 75% de los CVs nunca llega a RRHH.<br>No por falta de talento, por reglas invisibles.</p>
+  <p id="text-container-title">El 75% de los CVs nunca llega a RRHH.<br>No por falta de talento o experiencia,<br>sino por reglas invisibles.</p>
 
   <div id="text-img-container">
     <img id="text-img" src="./img/text-img.png" alt="">
