--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
  <!-- ================= HERO ================= -->
 <div id="hero-container">
   <h2 id="hero-title">Tu CV no falla. <br>El sistema sí.</h2>
-  <h3 id="hero-subtitle">Ayudamos a profesionales a superar los filtros ATS usados por el 99% de las empresas Fortune 500.<br><br>Vencé al robot: descarga la checklist de 10 puntos Anti-ATS definitiva.</h3>
+  <h3 id="hero-subtitle">Vencé al robot: descarga la checklist de 10 puntos Anti-ATS definitiva.</h3>
 </div>
  <!-- ================= FORM ================= -->
 <div id="form-container">
