--- a/index.html
+++ b/index.html
@@ -87,22 +87,29 @@
   <p id="text-container-title">El 75% de los CVs nunca llega a RRHH.<br>No por falta de talento o experiencia,<br>sino por reglas invisibles.</p>
 
   <div id="text-img-container">
-    <img id="text-img" src="./img/text-img.png" alt="">
-        <img id="text-img-responsive" src="./img/recuadros copy.png" alt="">
+    <img id="text-img" src="./img/text-img.png" alt="Formato incompatible, Palabras mal interpretadas, Lectura incorrecta">
+        <img id="text-img-responsive" src="./img/recuadros copy.png" alt="Formato incompatible, Palabras mal interpretadas, Lectura incorrecta">
 
   </div>
 
   </div >
   <div id="final-text-container">
-      <p id ="final-text">Esas y muchas otras reglas tienen nombre:<br><br> ATS (Applicant Tracking System).<br><br>
-Son los sistemas que analizan y filtran tu CV antes de que un humano llegue a verlo.<br><br>
-Si tu CV no está optimizado para superarlos, queda descartado automáticamente — sin importar tu talento.<br><br> Por eso es urgente saber si el tuyo está optimizado.<br><br>
-En el menú podés escanear tu CV, conocer tu puntaje y seguir los pasos exactos para mejorarlo.<br><br>
+      <p id ="final-text">Esas reglas invisibles tienen nombre: <br><br>ATS (Applicant Tracking System).<br><br>
 
-Antes de eso, descarga la Checklist de 10 puntos para que el filtro ATS no te descarte.<br><br>
-Esta lista te va a permitir verificar si tu CV ya cumple con los criterios básicos que usan estos sistemas y detectar errores críticos antes de auditarlo.<br><br>
- La recibís en PDF al dejar tu email en el formulario.<br><br>
-También podes empezar tu curriculum desde cero o desde tu perfil de LinkedIn haciendo click en el enlace del menú a sheetresume.com con todas las herramientas para crear un CV que te consiga entrevistas.<br><br>  
+Son los sistemas que analizan y filtran tu CV antes de que llegue a Recursos Humanos.<br>
+
+No es un detalle menor: el 99% de las empresas Fortune 500 utilizan estos filtros.<br><br>
+
+Si tu CV no está optimizado para superarlos, queda descartado, sin que nadie evalúe tu experiencia o talento.<br><br>
+
+Hoy, no alcanza con tener un buen perfil.<br>
+Tiene que estar preparado para superar esta barrera.<br><br>
+
+Verificá el tuyo ahora.<br><br>
+
+👉 Descargá la Checklist de 10 puntos Anti-ATS y asegurate de que tu CV cumpla con los criterios básicos antes de aplicar, la recibís en PDF al dejar tu email.<br><br>
+
+Si necesitas crear un CV desde cero o desde tu perfil de LinkedIn, podés hacerlo desde el menú con las herramientas de sheetresume.<br><br>
 Asegurate de llegar a RRHH.<br>
 No dejes que te descarten.
 </p>
