--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
   </div >
   <div id="final-text-container">
-      <p id ="final-text">Esas reglas invisibles tienen nombre: <br><br>ATS (Applicant Tracking System).<br><br>
+      <p id ="final-text">Esas y muchas otras reglas tienen nombre: <br><br>ATS (Applicant Tracking System).<br><br>
 
 Son los sistemas que analizan y filtran tu CV antes de que llegue a Recursos Humanos.<br>
 
