--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
  <!-- ================= HERO ================= -->
 <div id="hero-container">
   <h2 id="hero-title">Tu CV no falla. <br>El sistema sí.</h2>
-  <h3 id="hero-subtitle">Vencé al robot: descarga la checklist de 10 puntos Anti-ATS definitiva.</h3>
+  <h3 id="hero-subtitle">Vence al robot: descarga la checklist de 10 puntos Anti-ATS definitiva.</h3>
 </div>
  <!-- ================= FORM ================= -->
 <div id="form-container">
@@ -96,9 +96,9 @@
   <div id="final-text-container">
       <p id ="final-text">Esas y muchas otras reglas tienen nombre: <br><br>ATS (Applicant Tracking System).<br><br>
 
-Son los sistemas que analizan y filtran tu CV antes de que llegue a Recursos Humanos.<br>
+Son los sistemas que analizan y filtran tu CV antes de que llegue a Recursos Humanos y no es un detalle menor:<br>
 
-No es un detalle menor: el 99% de las empresas Fortune 500 utilizan estos filtros.<br><br>
+El 99% de las empresas Fortune 500 utilizan estos filtros.<br><br>
 
 Si tu CV no está optimizado para superarlos, queda descartado, sin que nadie evalúe tu experiencia o talento.<br><br>
 
@@ -108,7 +108,7 @@ Tiene que estar preparado para superar esta barrera.<br><br>
 Verificá el tuyo ahora.<br><br>
 
 👉 Descargá la Checklist de 10 puntos Anti-ATS y asegurate de que tu CV cumpla con los criterios básicos antes de aplicar, la recibís en PDF al dejar tu email.<br><br>
-
+En el menú podés escanear tu CV, conocer tu puntaje ATS y seguir los pasos exactos para mejorarlo.<br><br>
 Si necesitas crear un CV desde cero o desde tu perfil de LinkedIn, podés hacerlo desde el menú con las herramientas de sheetresume.<br><br>
 Asegurate de llegar a RRHH.<br>
 No dejes que te descarten.
