--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
   <header id="header">
     <div id="nav-container">
 
-      <div id="main-logo">
-        <img id="logo" src="./img/logo.png" alt="Smart Career Tools logo">
-        <a href="index.html">
-          <h1 id="title">Smart Career Tools</h1>
-        </a>
-      </div>
+     <div id="main-logo">
+  <a href="index.html" id="logo-link">
+    <img id="logo" src="./img/logo.png" alt="Smart Career Tools logo">
+    <h1 id="title">Smart Career Tools</h1>
+  </a>
+</div>
 
       <!-- Navegación desktop -->
       <nav id="nav">
