--- a/index.html
+++ b/index.html
@@ -21,115 +21,149 @@
   <header id="header">
     <div id="nav-container">
 
-     <div id="main-logo">
-  <a href="index.html" id="logo-link">
-    <img id="logo" src="./img/logo.png" alt="Smart Career Tools logo">
-    <h1 id="title">Smart Career Tools</h1>
-  </a>
-</div>
+      <div id="main-logo">
+        <a href="index.html" id="logo-link">
+          <img id="logo" src="./img/logo.png" alt="Smart Career Tools logo">
+          <h1 id="title">Smart Career Tools</h1>
+        </a>
+      </div>
 
       <!-- Navegación desktop -->
       <nav id="nav">
         <a id="nav-download" href="https://sheetsresumecom.sjv.io/DyDLMq">Escanea tu CV</a>
         <a href="">Blog</a>
-        <a href="https://sheetsresume.com/r/smart-career-tools"target="_blank" rel="noopener noreferrer">sheetsresume.com</a>
+        <a href="https://sheetsresume.com/r/smart-career-tools" target="_blank" rel="noopener noreferrer">
+          sheetsresume.com
+        </a>
       </nav>
 
       <!-- Botón hamburguesa -->
-    <button
-  id="hamburger-button"
-  aria-label="Abrir menú"
-  aria-expanded="false">
+      <button
+        id="hamburger-button"
+        aria-label="Abrir menú"
+        aria-expanded="false">
 
-  <!-- Icono hamburguesa -->
-  <span class="icon hamburger">
-    <span class="bar"></span>
-    <span class="bar"></span>
-    <span class="bar"></span>
-  </span>
+        <!-- Icono hamburguesa -->
+        <span class="icon hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </span>
 
-  <!-- Icono X -->
-  <span class="icon close">
-    <span class="bar"></span>
-    <span class="bar"></span>
-  </span>
+        <!-- Icono X -->
+        <span class="icon close">
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </span>
 
-</button>
+      </button>
 
-    <!-- Overlay -->
-    <div id="menu-overlay"></div>
+      <!-- Overlay -->
+      <div id="menu-overlay"></div>
 
-    <!-- Menú mobile -->
-    <div id="mobile-menu">
-      <a class="mobile-link" href="https://sheetsresumecom.sjv.io/DyDLMq">🔼 Escanea tu CV</a>
-      <a class="mobile-link" href="#form">🔽 Descargas</a>
-      <a class="mobile-link" href="">📝 Blog</a>
-      <a class="mobile-link" href="https://sheetsresume.com/r/smart-career-tools" target="_blank" rel="noopener noreferrer">🔗 sheetsresume.com</a>
     </div>
   </header>
- <!-- ================= SCROLL ================= -->
-<div id="scroll-layer">
 
- <!-- ================= HERO ================= -->
-<div id="hero-container">
-  <h2 id="hero-title">Tu CV no falla. <br>El sistema sí.</h2>
-  <h3 id="hero-subtitle">Vence al robot: descarga la checklist de 10 puntos Anti-ATS definitiva.</h3>
-</div>
- <!-- ================= FORM ================= -->
-<div id="form-container">
-  <div class="ml-embedded" data-form="kdTQNh"></div>
-  <span id="form_subtitle">Gratuito  ▪ Sin spam  ▪ Usado por +2000 profesionales</span>
-</div>
+  <!-- ================= SCROLL ================= -->
+  <div id="scroll-layer">
 
- <!-- ================= TEXT ================= -->
-  <div id="text-container">
-    
-  <p id="text-container-title">El 75% de los CVs nunca llega a RRHH.<br>No por falta de talento o experiencia,<br>sino por reglas invisibles.</p>
+    <!-- ================= HERO ================= -->
+    <div id="hero-container">
+      <h2 id="hero-title">Tu CV no falla. <br>El sistema sí.</h2>
+      <h3 id="hero-subtitle">
+        Vencé al robot: descarga la checklist de 10 puntos Anti-ATS definitiva.
+      </h3>
+    </div>
 
-  <div id="text-img-container">
-    <img id="text-img" src="./img/text-img.png" alt="Formato incompatible, Palabras mal interpretadas, Lectura incorrecta">
-        <img id="text-img-responsive" src="./img/recuadros copy.png" alt="Formato incompatible, Palabras mal interpretadas, Lectura incorrecta">
+    <!-- ================= FORM ================= -->
+    <div id="form-container">
+      <div class="ml-embedded" data-form="kdTQNh"></div>
+      <span id="form_subtitle">
+        Gratuito ▪ Sin spam ▪ Usado por +2000 profesionales
+      </span>
+    </div>
+
+    <!-- ================= TEXT ================= -->
+    <div id="text-container">
+      
+      <p id="text-container-title">
+        El 75% de los CVs nunca llega a RRHH.<br>
+        No por falta de talento o experiencia,<br>
+        sino por reglas invisibles.
+      </p>
+
+      <div id="text-img-container">
+        <img id="text-img" src="./img/text-img.png"
+          alt="Formato incompatible, Palabras mal interpretadas, Lectura incorrecta">
+        <img id="text-img-responsive" src="./img/recuadros copy.png"
+          alt="Formato incompatible, Palabras mal interpretadas, Lectura incorrecta">
+      </div>
+
+    </div>
+
+    <div id="final-text-container">
+      <p id="final-text">
+        Esas reglas invisibles tienen nombre: <strong>ATS (Applicant Tracking System)</strong>.<br><br>
+
+        Son los sistemas que analizan y filtran tu CV antes de que llegue a Recursos Humanos.<br><br>
+
+        El 99% de las empresas Fortune 500 utilizan estos filtros.<br><br>
+
+        Si tu CV no está optimizado para superarlos, queda descartado automáticamente — sin que nadie evalúe tu talento.<br><br>
+
+        Hoy no alcanza con tener experiencia.  
+        Tiene que estar preparado para pasar el filtro.<br><br>
+
+        👉 <strong>Descargá la Checklist Anti-ATS de 10 puntos y verificá que tu CV cumpla lo esencial.</strong><br><br>
+
+        La recibís en PDF al dejar tu email.<br><br>
+
+        Después, si querés crear un CV optimizado desde cero o convertir tu perfil de LinkedIn en uno listo para superar filtros, podés hacerlo con las herramientas de <strong>sheetresume.com</strong> (enlace en el menú).<br><br>
+
+        Asegurate de llegar a RRHH.  
+        No dejes que un filtro automático decida por vos.
+      </p>
+    </div>
 
   </div>
+  <!-- ================= FIN SCROLL ================= -->
 
-  </div >
-  <div id="final-text-container">
-      <p id ="final-text">Esas y muchas otras reglas tienen nombre: <br><br>ATS (Applicant Tracking System).<br><br>
-
-Son los sistemas que analizan y filtran tu CV antes de que llegue a Recursos Humanos y no es un detalle menor:<br>
-
-El 99% de las empresas Fortune 500 utilizan estos filtros.<br><br>
-
-Si tu CV no está optimizado para superarlos, queda descartado, sin que nadie evalúe tu experiencia o talento.<br><br>
-
-Hoy, no alcanza con tener un buen perfil.<br>
-Tiene que estar preparado para superar esta barrera.<br><br>
-
-Verificá el tuyo ahora.<br><br>
-
-👉 Descargá la Checklist de 10 puntos Anti-ATS y asegurate de que tu CV cumpla con los criterios básicos antes de aplicar, la recibís en PDF al dejar tu email.<br><br>
-En el menú podés escanear tu CV, conocer tu puntaje ATS y seguir los pasos exactos para mejorarlo.<br><br>
-Si necesitas crear un CV desde cero o desde tu perfil de LinkedIn, podés hacerlo desde el menú con las herramientas de sheetresume.<br><br>
-Asegurate de llegar a RRHH.<br>
-No dejes que te descarten.
-</p>
-</div>
-  
- <!-- ================= fin scroll ================= -->
-</div>
 
   <!-- ================= FOOTER ================= -->
   <footer class="sticky-footer">
     <div class="footer-content">
-      <div id="copyright-container"><span id="copyright">©</span> <span>Team Humanos</span></div>
-<div id="copyright-desktop">© 2025 - Smart Career Tools - Diseñado para pasar filtros</div>
+      <div id="copyright-container">
+        <span id="copyright">©</span>
+        <span>Team Humanos</span>
+      </div>
+
+      <div id="copyright-desktop">
+        © 2025 - Smart Career Tools - Diseñado para pasar filtros
+      </div>
+
       <nav class="footer-links">
-       <div id="contact-toggle-container"> <a  id="contact-toggle">
-          <span class="contact-text">Contacto</span>
-        </a></div>
+        <div id="contact-toggle-container">
+          <a id="contact-toggle">
+            <span class="contact-text">Contacto</span>
+          </a>
+        </div>
       </nav>
     </div>
   </footer>
+
+
+  <!-- ================= MENÚ MOBILE (MOVIDO FUERA DEL HEADER) ================= -->
+  <div id="mobile-menu">
+    <a class="mobile-link" href="https://sheetsresumecom.sjv.io/DyDLMq">🔼 Escanea tu CV</a>
+    <a class="mobile-link" href="#form">🔽 Descargas</a>
+    <a class="mobile-link" href="">📝 Blog</a>
+    <a class="mobile-link"
+       href="https://sheetsresume.com/r/smart-career-tools"
+       target="_blank"
+       rel="noopener noreferrer">
+       🔗 sheetsresume.com
+    </a>
+  </div>
 
   <script src="script.js"></script>
 </body>
