--- a/index.html
+++ b/index.html
@@ -102,27 +102,25 @@
     </div>
 
     <div id="final-text-container">
-      <p id="final-text">
-        Esas reglas invisibles tienen nombre: <strong>ATS (Applicant Tracking System)</strong>.<br><br>
+        <p id ="final-text">Esas y muchas otras reglas tienen nombre: <br><br>ATS (Applicant Tracking System).<br><br>
 
-        Son los sistemas que analizan y filtran tu CV antes de que llegue a Recursos Humanos.<br><br>
+Son los sistemas que analizan y filtran tu CV antes de que llegue a Recursos Humanos y no es un detalle menor:<br>
 
-        El 99% de las empresas Fortune 500 utilizan estos filtros.<br><br>
+El 99% de las empresas Fortune 500 utilizan estos filtros.<br><br>
 
-        Si tu CV no está optimizado para superarlos, queda descartado automáticamente — sin que nadie evalúe tu talento.<br><br>
+Si tu CV no está optimizado para superarlos, queda descartado, sin que nadie evalúe tu experiencia o talento.<br><br>
 
-        Hoy no alcanza con tener experiencia.  
-        Tiene que estar preparado para pasar el filtro.<br><br>
+Hoy, no alcanza con tener un buen perfil.<br>
+Tiene que estar preparado para superar esta barrera.<br><br>
 
-        👉 <strong>Descargá la Checklist Anti-ATS de 10 puntos y verificá que tu CV cumpla lo esencial.</strong><br><br>
+Verificá el tuyo ahora.<br><br>
 
-        La recibís en PDF al dejar tu email.<br><br>
-
-        Después, si querés crear un CV optimizado desde cero o convertir tu perfil de LinkedIn en uno listo para superar filtros, podés hacerlo con las herramientas de <strong>sheetresume.com</strong> (enlace en el menú).<br><br>
-
-        Asegurate de llegar a RRHH.  
-        No dejes que un filtro automático decida por vos.
-      </p>
+👉 Descargá la Checklist de 10 puntos Anti-ATS y asegurate de que tu CV cumpla con los criterios básicos antes de aplicar, la recibís en PDF al dejar tu email.<br><br>
+En el menú podés escanear tu CV, conocer tu puntaje ATS y seguir los pasos exactos para mejorarlo.<br><br>
+Si necesitas crear un CV desde cero o desde tu perfil de LinkedIn, podés hacerlo desde el menú con las herramientas de sheetresume.<br><br>
+Asegurate de llegar a RRHH.<br>
+No dejes que te descarten.
+</p>
     </div>
 
   </div>
