negrita detalle final!

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
 
     <div id="final-text-container">
-        <p id ="final-text">Esas y muchas otras reglas tienen nombre: <br><br>ATS (Applicant Tracking System).<br><br>
+        <p id ="final-text">Esas y muchas otras reglas tienen nombre: <br><br><strong>ATS (Applicant Tracking System)</strong>.<br><br>
 
 Son los sistemas que analizan y filtran tu CV antes de que llegue a Recursos Humanos y no es un detalle menor:<br>
 
@@ -113,7 +113,7 @@ Si tu CV no está optimizado para superarlos, queda descartado, sin que nadie ev
 Hoy, no alcanza con tener un buen perfil.<br>
 Tiene que estar preparado para superar esta barrera.<br><br>
 
-Verificá el tuyo ahora.<br><br>
+<strong>Verificá el tuyo ahora.</strong><br><br>
 
 👉 Descargá la Checklist de 10 puntos Anti-ATS y asegurate de que tu CV cumpla con los criterios básicos antes de aplicar, la recibís en PDF al dejar tu email.<br><br>
 En el menú podés escanear tu CV, conocer tu puntaje ATS y seguir los pasos exactos para mejorarlo.<br><br>
