detalles en negrita

--- a/index.html
+++ b/index.html
@@ -110,16 +110,16 @@ El 99% de las empresas Fortune 500 utilizan estos filtros.<br><br>
 
 Si tu CV no está optimizado para superarlos, queda descartado, sin que nadie evalúe tu experiencia o talento.<br><br>
 
-Hoy, no alcanza con tener un buen perfil.<br>
-Tiene que estar preparado para superar esta barrera.<br><br>
+Hoy, no alcanza con que tu perfil sea idoneo,<br>
+tiene que estar preparado para superar esta barrera.<br><br>
 
-<strong>Verificá el tuyo ahora.</strong><br><br>
+<strong>👉 Verificá el tuyo ahora.</strong><br><br>
 
-👉 Descargá la Checklist de 10 puntos Anti-ATS y asegurate de que tu CV cumpla con los criterios básicos antes de aplicar, la recibís en PDF al dejar tu email.<br><br>
+Descargá la Checklist de 10 puntos Anti-ATS y asegurate de que tu CV cumpla con los criterios básicos antes de aplicar, la recibís en PDF al dejar tu email.<br><br>
 En el menú podés escanear tu CV, conocer tu puntaje ATS y seguir los pasos exactos para mejorarlo.<br><br>
 Si necesitas crear un CV desde cero o desde tu perfil de LinkedIn, podés hacerlo desde el menú con las herramientas de sheetresume.<br><br>
-Asegurate de llegar a RRHH.<br>
-No dejes que te descarten.
+<strong>Asegurate de llegar a RRHH.<br>
+No dejes que te descarten.</strong>
 </p>
     </div>
 
