form subtitulo reducido

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a id="nav-download" href="https://sheetsresumecom.sjv.io/DyDLMq">Escanea tu CV</a>
         <a href="">Blog</a>
         <a href="https://sheetsresume.com/r/smart-career-tools" target="_blank" rel="noopener noreferrer">
-          sheetsresume.com
+          Sheetsresume.com
         </a>
       </nav>
 
@@ -71,7 +71,7 @@
     <div id="hero-container">
       <h2 id="hero-title">Tu CV no falla. <br>El sistema sí.</h2>
       <h3 id="hero-subtitle">
-        Vencé al robot: descarga la checklist de 10 puntos Anti-ATS definitiva.
+        Vence al robot: descarga la checklist de 10 puntos Anti-ATS definitiva.
       </h3>
     </div>
 
@@ -79,7 +79,7 @@
     <div id="form-container">
       <div class="ml-embedded" data-form="kdTQNh"></div>
       <span id="form_subtitle">
-        Gratuito ▪ Sin spam ▪ Usado por +2000 profesionales
+        Gratuito ▪ Usado por +2000 profesionales
       </span>
     </div>
 
@@ -106,7 +106,7 @@
 
 Son los sistemas que analizan y filtran tu CV antes de que llegue a Recursos Humanos y no es un detalle menor:<br>
 
-El 99% de las empresas Fortune 500 utilizan estos filtros.<br><br>
+El 99% de las empresas Fortune 500 utilizan estos algoritmos.<br><br>
 
 Si tu CV no está optimizado para superarlos, queda descartado, sin que nadie evalúe tu experiencia o talento.<br><br>
 
