components CAMBIO DRAMATICO

--- a/index.html
+++ b/index.html
@@ -18,51 +18,7 @@
 <body>
 
   <!-- ================= HEADER ================= -->
-  <header id="header">
-    <div id="nav-container">
-
-      <div id="main-logo">
-        <a href="index.html" id="logo-link">
-          <img id="logo" src="./img/logo.png" alt="Smart Career Tools logo">
-          <h1 id="title">Smart Career Tools</h1>
-        </a>
-      </div>
-
-      <!-- Navegación desktop -->
-      <nav id="nav">
-        <a id="nav-download" href="https://sheetsresumecom.sjv.io/DyDLMq">Escanea tu CV</a>
-        <a href="">Blog</a>
-        <a href="https://sheetsresume.com/r/smart-career-tools" target="_blank" rel="noopener noreferrer">
-          Sheetsresume.com
-        </a>
-      </nav>
-
-      <!-- Botón hamburguesa -->
-      <button
-        id="hamburger-button"
-        aria-label="Abrir menú"
-        aria-expanded="false">
-
-        <!-- Icono hamburguesa -->
-        <span class="icon hamburger">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </span>
-
-        <!-- Icono X -->
-        <span class="icon close">
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </span>
-
-      </button>
-
-      <!-- Overlay -->
-      <div id="menu-overlay"></div>
-
-    </div>
-  </header>
+  <div id="header-container"></div>
 
   <!-- ================= SCROLL ================= -->
   <div id="scroll-layer">
@@ -128,40 +84,11 @@ No dejes que te descarten.</strong>
 
 
   <!-- ================= FOOTER ================= -->
-  <footer class="sticky-footer">
-    <div class="footer-content">
-      <div id="copyright-container">
-        <span id="copyright">©</span>
-        <span>Team Humanos</span>
-      </div>
-
-      <div id="copyright-desktop">
-        © 2025 - Smart Career Tools - Diseñado para pasar filtros
-      </div>
-
-      <nav class="footer-links">
-        <div id="contact-toggle-container">
-          <a id="contact-toggle">
-            <span class="contact-text">Contacto</span>
-          </a>
-        </div>
-      </nav>
-    </div>
-  </footer>
-
+  
+<div id="footer-container"></div>
 
   <!-- ================= MENÚ MOBILE (MOVIDO FUERA DEL HEADER) ================= -->
-  <div id="mobile-menu">
-    <a class="mobile-link" href="https://sheetsresumecom.sjv.io/DyDLMq">🔼 Escanea tu CV</a>
-    <a class="mobile-link" href="#form">🔽 Descargas</a>
-    <a class="mobile-link" href="">📝 Blog</a>
-    <a class="mobile-link"
-       href="https://sheetsresume.com/r/smart-career-tools"
-       target="_blank"
-       rel="noopener noreferrer">
-       🔗 sheetsresume.com
-    </a>
-  </div>
+ <div id="mobile-menu-container"> </div>
 
   <script src="script.js"></script>
 </body>
