--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
     rel="stylesheet">
+    <link rel="preload" as="image" href="/img/iconos/portapapeles.gif">
 </head>
 
 <body>
