--- a/descargas/index.html
+++ b/descargas/index.html
@@ -13,7 +13,7 @@
     <div id="header-container"></div>
  <div id="scroll-layer" style="display: flex; flex-direction: column; align-items: center;">
 
-<h1 class="blog-title" style="margin-top: 0px; font-family: 'cambria'">Descargas<br><br></h1>
+<h1 class="blog-title" style="margin-top: 0px; font-family: 'cambria' !important">Descargas<br><br></h1>
 
  <h3 id="hero-subtitle">
         Vence al robot: descarga la checklist de 10 puntos Anti-ATS definitiva.
