--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
     rel="stylesheet">
     <link rel="preload" as="image" href="/img/iconos/portapapeles.gif">
+     <link rel="preload" as="image" href="/img/iconos/portapapeles2.gif">
 </head>
 
 <body>
