--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@ Son los sistemas que analizan y filtran tu CV antes de que llegue a Recursos Hum
 
 El 99% de las empresas Fortune 500 utilizan estos algoritmos.<br><br>
 
-Si tu CV no está optimizado para superarlos, queda descartado, sin que nadie evalúe tu experiencia o talento.<br><br>
+Si tu CV no está optimizado para superarlos, sos invisible para el sistema.<br><br>
 
 Hoy, no alcanza con que tu perfil sea idoneo,<br>
 tiene que estar preparado para superar esta barrera.<br><br>
 
 <strong>👉 Verificá el tuyo ahora.</strong><br><br>
 
-Descargá la Checklist de 10 puntos Anti-ATS y asegurate de que tu CV cumpla con los criterios básicos antes de aplicar, la recibís en PDF al dejar tu email.<br><br>
+Descargá la Checklist de 10 puntos Anti-ATS y asegurate de que tu CV cumpla con los criterios básicos antes de aplicar, la recibís en PDF a tu casilla de email.<br><br>
 En el menú podés escanear tu CV, conocer tu puntaje ATS y seguir los pasos exactos para mejorarlo.<br><br>
 Si necesitas crear un CV desde cero o desde tu perfil de LinkedIn, podés hacerlo desde el menú con las herramientas de sheetresume.<br><br>
 <strong>Asegurate de llegar a RRHH.<br>
