--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
     <div id="final-text-container">
            <p id ="final-text">Esas y muchas otras reglas tienen nombre: <br><br><strong>ATS (Applicant Tracking System)</strong>.<br><br>
 
-Son los sistemas que analizan y filtran tu CV antes de que llegue a Recursos Humanos y no es un detalle menor:<br>
+Son los sistemas que analizan y filtran tu CV antes de que llegue a Recursos Humanos.<br><br>
 
 El 99% de las empresas Fortune 500 utilizan estos algoritmos.<br><br>
 
 Si tu CV no está optimizado para superarlos, sos invisible para el sistema.<br><br>
 
 Hoy, no alcanza con que tu perfil sea idoneo,<br>
-tiene que estar preparado para superar esta barrera.<br><br>
+tu CV tiene que estar preparado para superar esta barrera.<br><br>
 
 <strong>👉 Verificá el tuyo ahora.</strong><br><br>
 
