--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
         </div>
 
           <div id="final-text-container"> <p id ="final-text">
-       <span style=" margin-left: -10px; ">▪</span> Descargá la Checklist de 10 puntos Anti-ATS y asegurate de que tu CV cumpla con los criterios básicos antes de aplicar, la recibís en PDF a tu casilla de email.<br><br>
-       <span style=" margin-left: -10px; ">▪</span> En el menú podés escanear tu CV, conocer tu puntaje ATS y seguir los pasos exactos para mejorarlo.<br><br>
-       <span style=" margin-left: -10px; ">▪</span> Si necesitas crear un CV desde cero o desde tu perfil de LinkedIn, podés hacerlo desde el menú con las herramientas de sheetresume.<br><br>
+       <span style=" margin-left: -10px; font-family: 'Courier New', Courier, monospace;">▪</span> Descargá la Checklist de 10 puntos Anti-ATS y asegurate de que tu CV cumpla con los criterios básicos antes de aplicar, la recibís en PDF a tu casilla de email.<br><br>
+       <span style=" margin-left: -10px; font-family: 'Courier New', Courier, monospace;">▪</span> En el menú podés escanear tu CV, conocer tu puntaje ATS y seguir los pasos exactos para mejorarlo.<br><br>
+       <span style=" margin-left: -10px; font-family: 'Courier New', Courier, monospace;">▪</span> Si necesitas crear un CV desde cero o desde tu perfil de LinkedIn, podés hacerlo desde el menú con las herramientas de sheetresume.<br><br>
         <strong>Asegurate de llegar a RRHH.<br>
           No dejes que te descarten.</strong>
         </p>
