--- a/index.html
+++ b/index.html
@@ -49,6 +49,24 @@
         alt="Formato incompatible, Palabras mal interpretadas, Lectura incorrecta">
         <img id="text-img-responsive" src="./img/recuadros copy.png"
         alt="Formato incompatible, Palabras mal interpretadas, Lectura incorrecta">
+        <!-- Modal -->
+<!-- Modal -->
+<div id="infoModal" class="modal-overlay" aria-hidden="true">
+  <div class="modal-content" role="dialog" aria-modal="true">
+    <div class="modal-text">
+      <p><strong>- FORMATO INCOMPATIBLE:</strong><br>
+        Tablas y gráficos invisibles para un ATS que lee JPEG, PNG o PDF de imagen.</p>
+
+      <p><strong>- PALABRAS CLAVE MAS INTERPRETADAS:</strong><br>
+        ATS ignora términos relevantes si no siguen los estándares correctos.</p>
+
+      <p><strong>- LECTURA SEMÁNTICA INCORRECTA:</strong><br>
+        Descripciones mal estructuradas pierden su significado</p>
+    </div>
+  </div>
+</div>
+
+
       </div>
       
     </div>
