--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <p><strong>- FORMATO INCOMPATIBLE:</strong><br>
         Tablas y gráficos invisibles para un ATS que lee JPEG, PNG o PDF de imagen.</p>
 
-      <p><strong>- PALABRAS CLAVE MAS INTERPRETADAS:</strong><br>
+      <p><strong>- PALABRAS CLAVE MAL INTERPRETADAS:</strong><br>
         ATS ignora términos relevantes si no siguen los estándares correctos.</p>
 
       <p><strong>- LECTURA SEMÁNTICA INCORRECTA:</strong><br>
