--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="modal-content" role="dialog" aria-modal="true">
     <div class="modal-text">
       <p><strong>- FORMATO INCOMPATIBLE:</strong><br>
-        Tablas y gráficos invisibles para un ATS que lee JPEG, PNG o PDF de imagen.</p>
+        Tablas y gráficos invisibles para un ATS que no lee JPEG, PNG o PDF de imagen.</p>
 
       <p><strong>- PALABRAS CLAVE MAL INTERPRETADAS:</strong><br>
         ATS ignora términos relevantes si no siguen los estándares correctos.</p>
