--- a/index.html
+++ b/index.html
@@ -54,14 +54,15 @@
 <div id="infoModal" class="modal-overlay" aria-hidden="true">
   <div class="modal-content" role="dialog" aria-modal="true">
     <div class="modal-text">
+      <p style="text-align: center;"><strong>ERRORES MÁS COMUNES EN UN CV</strong><br><br>
       <p><strong>- FORMATO INCOMPATIBLE:</strong><br>
-        Tablas y gráficos invisibles para un ATS que no lee JPEG, PNG o PDF de imagen.</p>
+       Algunos diseños hacen que el sistema no pueda leer tu CV correctamente y omita información importante.</p>
 
       <p><strong>- PALABRAS CLAVE MAL INTERPRETADAS:</strong><br>
-        ATS ignora términos relevantes si no siguen los estándares correctos.</p>
+        Si no usás las palabras adecuadas, el sistema puede no detectar tus habilidades o experiencia.</p>
 
       <p><strong>- LECTURA SEMÁNTICA INCORRECTA:</strong><br>
-        Descripciones mal estructuradas pierden su significado</p>
+       Si las descripciones no son claras, el sistema no entiende bien lo que hiciste.</p>
     </div>
   </div>
 </div>
